提交zk web代码，存在 watcher 不生效的问题

--- a/monitor/monitor-web/pom.xml
+++ b/monitor/monitor-web/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.yui.tool</groupId>
+            <artifactId>monitor-zk</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
