--- a/monitor/monitor-zk/pom.xml
+++ b/monitor/monitor-zk/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>zookeeper</artifactId>
             <version>3.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
