--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>monitor-web</module>
         <module>monitor-zk</module>
+        <module>monitor-email</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -39,20 +40,6 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core &ndash;&gt;
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.12.0</version>
-        </dependency>
-
-        &lt;!&ndash; https://mvnrepository.com/artifact/ch.qos.logback/logback-classic &ndash;&gt;
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-        </dependency>-->
-
     </dependencies>
 
     <build>
