--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -7,6 +7,7 @@
         <module>monitor-web</module>
         <module>monitor-zk</module>
         <module>monitor-email</module>
+        <module>monitor-kafka</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
